--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "watch": "nodemon index.js"
   },
   "dependencies": {
+    "@types/express": "^4.17.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "mongoose": "^5.9.5",
     "nodemon": "^2.0.2"
   }
