--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "watch": "nodemon index.js"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.3",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.8.23",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "mongoose": "^5.9.5",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "querystring": "^0.2.0"
   }
 }
