--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.5",
     "nodemon": "^2.0.2",
     "querystring": "^0.2.0"
-  }
+  },
+  "devDependencies": {}
 }
