--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.3",
     "axios": "^0.19.2",
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dayjs": "^1.8.23",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.5",
     "nodemon": "^2.0.2",
