--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 SMS_TOKEN=551068AE-5DD7-8BFC-43EE-C64013CBBE7F
 DEVELOPMENT=TRUE
 
+COOKIE_MAX_AGE=86400000
+COOKIE_KEY='~6x?q57c,c{e[=A\e-m}ej5/hQ'
+
